feat: 添加认证和权限
