# bcs-services/bcs-project/proto/bcsproject/bcsproject.swagger.json
@@ -14,6 +14,76 @@
     "application/json"
   ],
   "paths": {
+    "/bcsproject/v1/authorized_projects": {
+      "get": {
+        "summary": "查询有权限项目列表",
+        "description": "查询用户有权限的项目列表",
+        "operationId": "BCSProject_ListAuthorizedProjects",
+        "responses": {
+          "200": {
+            "description": "A successful response.",
+            "schema": {
+              "$ref": "#/definitions/bcsprojectListAuthorizedProjResp"
+            }
+          },
+          "default": {
+            "description": "An unexpected error response",
+            "schema": {
+              "$ref": "#/definitions/runtimeError"
+            }
+          }
+        },
+        "tags": [
+          "BCSProject"
+        ]
+      }
+    },
+    "/bcsproject/v1/healthz": {
+      "get": {
+        "description": "探针API, 用于readness",
+        "operationId": "Healthz_Healthz",
+        "responses": {
+          "200": {
+            "description": "A successful response.",
+            "schema": {
+              "$ref": "#/definitions/bcsprojectHealthzResponse"
+            }
+          },
+          "default": {
+            "description": "An unexpected error response",
+            "schema": {
+              "$ref": "#/definitions/runtimeError"
+            }
+          }
+        },
+        "tags": [
+          "Healthz"
+        ]
+      }
+    },
+    "/bcsproject/v1/ping": {
+      "get": {
+        "description": "探针API, 用于liveness",
+        "operationId": "Healthz_Ping",
+        "responses": {
+          "200": {
+            "description": "A successful response.",
+            "schema": {
+              "$ref": "#/definitions/bcsprojectPingResponse"
+            }
+          },
+          "default": {
+            "description": "An unexpected error response",
+            "schema": {
+              "$ref": "#/definitions/runtimeError"
+            }
+          }
+        },
+        "tags": [
+          "Healthz"
+        ]
+      }
+    },
     "/bcsproject/v1/projects": {
       "get": {
         "summary": "查询项目列表",
@@ -348,6 +418,47 @@
         "projectCode"
       ]
     },
+    "bcsprojectHealthzResponse": {
+      "type": "object",
+      "properties": {
+        "status": {
+          "type": "string",
+          "description": "服务整体状态",
+          "title": "status"
+        },
+        "mongoStatus": {
+          "type": "string",
+          "description": "服务依赖的 mongo 状态",
+          "title": "mongo status"
+        }
+      }
+    },
+    "bcsprojectListAuthorizedProjResp": {
+      "type": "object",
+      "properties": {
+        "code": {
+          "type": "integer",
+          "format": "int64",
+          "description": "返回错误码",
+          "title": "code"
+        },
+        "message": {
+          "type": "string",
+          "description": "返回错误信息",
+          "title": "message"
+        },
+        "data": {
+          "$ref": "#/definitions/bcsprojectListProjectData",
+          "description": "返回项目信息, 包含总量及项目列表",
+          "title": "data"
+        },
+        "requestID": {
+          "type": "string",
+          "description": "请求 ID",
+          "title": "request id"
+        }
+      }
+    },
     "bcsprojectListProjectData": {
       "type": "object",
       "properties": {
@@ -392,8 +503,35 @@
           "type": "string",
           "description": "请求 ID",
           "title": "request id"
+        },
+        "webAnnotations": {
+          "$ref": "#/definitions/bcsprojectPerms",
+          "description": "项目更多信息，主要是权限相关",
+          "title": "webAnnotations"
         }
       }
+    },
+    "bcsprojectPerms": {
+      "type": "object",
+      "properties": {
+        "perms": {
+          "type": "object",
+          "description": "用户针对项目的权限",
+          "title": "perms"
+        }
+      }
+    },
+    "bcsprojectPingResponse": {
+      "type": "object",
+      "properties": {
+        "ret": {
+          "type": "string",
+          "description": "成功返回 Pong",
+          "title": "Ret"
+        }
+      },
+      "description": "Ping API 响应",
+      "title": "PingResp"
     },
     "bcsprojectProject": {
       "type": "object",
@@ -540,6 +678,11 @@
           "type": "string",
           "description": "请求 ID",
           "title": "request id"
+        },
+        "webAnnotations": {
+          "$ref": "#/definitions/bcsprojectPerms",
+          "description": "项目更多信息，主要是权限相关",
+          "title": "webAnnotations"
         }
       }
     },
@@ -654,6 +797,14 @@
         }
       },
       "description": "`Any` contains an arbitrary serialized protocol buffer message along with a\nURL that describes the type of the serialized message.\n\nProtobuf library provides support to pack/unpack Any values in the form\nof utility functions or additional generated methods of the Any type.\n\nExample 1: Pack and unpack a message in C++.\n\n    Foo foo = ...;\n    Any any;\n    any.PackFrom(foo);\n    ...\n    if (any.UnpackTo(\u0026foo)) {\n      ...\n    }\n\nExample 2: Pack and unpack a message in Java.\n\n    Foo foo = ...;\n    Any any = Any.pack(foo);\n    ...\n    if (any.is(Foo.class)) {\n      foo = any.unpack(Foo.class);\n    }\n\n Example 3: Pack and unpack a message in Python.\n\n    foo = Foo(...)\n    any = Any()\n    any.Pack(foo)\n    ...\n    if any.Is(Foo.DESCRIPTOR):\n      any.Unpack(foo)\n      ...\n\n Example 4: Pack and unpack a message in Go\n\n     foo := \u0026pb.Foo{...}\n     any, err := ptypes.MarshalAny(foo)\n     ...\n     foo := \u0026pb.Foo{}\n     if err := ptypes.UnmarshalAny(any, foo); err != nil {\n       ...\n     }\n\nThe pack methods provided by protobuf library will by default use\n'type.googleapis.com/full.type.name' as the type URL and the unpack\nmethods only use the fully qualified type name after the last '/'\nin the type URL, for example \"foo.bar.com/x/y.z\" will yield type\nname \"y.z\".\n\n\nJSON\n====\nThe JSON representation of an `Any` value uses the regular\nrepresentation of the deserialized, embedded message, with an\nadditional field `@type` which contains the type URL. Example:\n\n    package google.profile;\n    message Person {\n      string first_name = 1;\n      string last_name = 2;\n    }\n\n    {\n      \"@type\": \"type.googleapis.com/google.profile.Person\",\n      \"firstName\": \u003cstring\u003e,\n      \"lastName\": \u003cstring\u003e\n    }\n\nIf the embedded message type is well-known and has a custom JSON\nrepresentation, that representation will be embedded adding a field\n`value` which holds the custom JSON in addition to the `@type`\nfield. Example (for message [google.protobuf.Duration][]):\n\n    {\n      \"@type\": \"type.googleapis.com/google.protobuf.Duration\",\n      \"value\": \"1.212s\"\n    }"
+    },
+    "protobufNullValue": {
+      "type": "string",
+      "enum": [
+        "NULL_VALUE"
+      ],
+      "default": "NULL_VALUE",
+      "description": "`NullValue` is a singleton enumeration to represent the null value for the\n`Value` type union.\n\n The JSON representation for `NullValue` is JSON `null`.\n\n - NULL_VALUE: Null value."
     },
     "runtimeError": {
       "type": "object",
